{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 33,
  "lineage": "345cf743-af44-7407-c449-6fbf8a843804",
  "resources": [
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:network-acl/acl-00cda874a13ae9f39",
            "default_network_acl_id": "acl-00cda874a13ae9f39",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00cda874a13ae9f39",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "050752630539",
            "region": "eu-central-1",
            "subnet_ids": [
              "subnet-00743531299c1b657",
              "subnet-0385e0508d823782d",
              "subnet-060e56e7ee6055766",
              "subnet-0e1558305dc07bbd9"
            ],
            "tags": {
              "Name": "vpc-project01-dev-default",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-default",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-0ab87d0dc45c55fb4",
            "default_route_table_id": "rtb-0ab87d0dc45c55fb4",
            "id": "rtb-0ab87d0dc45c55fb4",
            "owner_id": "050752630539",
            "propagating_vgws": null,
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-default",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-default",
              "owners": "project01"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:security-group/sg-01806737342da5d1f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01806737342da5d1f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "050752630539",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-project01-dev-default",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-default",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:internet-gateway/igw-0c976385bfc43005d",
            "id": "igw-0c976385bfc43005d",
            "owner_id": "050752630539",
            "region": "eu-central-1",
            "tags": {
              "Name": "vpc-project01-dev",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c976385bfc43005d",
            "id": "r-rtb-088e4aa4ebe7d8f651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-088e4aa4ebe7d8f65",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_internet_gateway.this",
            "module.vpc_main.module.vpc.aws_route_table.public",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-0774d831e8a37df7c",
            "id": "rtb-0774d831e8a37df7c",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-db-eu-central-1a",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-db-eu-central-1a",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-0b4b3eb0c7693c95c",
            "id": "rtb-0b4b3eb0c7693c95c",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-db-eu-central-1b",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-db-eu-central-1b",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-00a4c128b298bc1d8",
            "id": "rtb-00a4c128b298bc1d8",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-db-eu-central-1c",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-db-eu-central-1c",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-0cfa6a3b2a8e83f17",
            "id": "rtb-0cfa6a3b2a8e83f17",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-private-eu-central-1a",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-private-eu-central-1a",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-04a78fcd225cb30cf",
            "id": "rtb-04a78fcd225cb30cf",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-private-eu-central-1b",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-private-eu-central-1b",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-034e36ef922fffbe0",
            "id": "rtb-034e36ef922fffbe0",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-private-eu-central-1c",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-private-eu-central-1c",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:route-table/rtb-088e4aa4ebe7d8f65",
            "id": "rtb-088e4aa4ebe7d8f65",
            "owner_id": "050752630539",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "vpc-project01-dev-public",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev-public",
              "owners": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1e2daddc490497f",
            "region": "eu-central-1",
            "route_table_id": "rtb-0774d831e8a37df7c",
            "subnet_id": "subnet-0078847c4e59f6835"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.database",
            "module.vpc_main.module.vpc.aws_route_table.private",
            "module.vpc_main.module.vpc.aws_subnet.database",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ce1a6a09a0403a9",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b4b3eb0c7693c95c",
            "subnet_id": "subnet-00743531299c1b657"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.database",
            "module.vpc_main.module.vpc.aws_route_table.private",
            "module.vpc_main.module.vpc.aws_subnet.database",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf8822512c057da",
            "region": "eu-central-1",
            "route_table_id": "rtb-00a4c128b298bc1d8",
            "subnet_id": "subnet-0847220893b946b34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.database",
            "module.vpc_main.module.vpc.aws_route_table.private",
            "module.vpc_main.module.vpc.aws_subnet.database",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b6a108243d1275b",
            "region": "eu-central-1",
            "route_table_id": "rtb-0cfa6a3b2a8e83f17",
            "subnet_id": "subnet-0f72f63271f202e95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.private",
            "module.vpc_main.module.vpc.aws_subnet.private",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031217fd65302a8a7",
            "region": "eu-central-1",
            "route_table_id": "rtb-04a78fcd225cb30cf",
            "subnet_id": "subnet-0cf821f7e2b7b0821"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.private",
            "module.vpc_main.module.vpc.aws_subnet.private",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0796484f170fd6f17",
            "region": "eu-central-1",
            "route_table_id": "rtb-034e36ef922fffbe0",
            "subnet_id": "subnet-0c0a34314da8de0ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.private",
            "module.vpc_main.module.vpc.aws_subnet.private",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7476d729110f3b0",
            "region": "eu-central-1",
            "route_table_id": "rtb-088e4aa4ebe7d8f65",
            "subnet_id": "subnet-0385e0508d823782d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.public",
            "module.vpc_main.module.vpc.aws_subnet.public",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052e56e1db0237a0c",
            "region": "eu-central-1",
            "route_table_id": "rtb-088e4aa4ebe7d8f65",
            "subnet_id": "subnet-060e56e7ee6055766"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.public",
            "module.vpc_main.module.vpc.aws_subnet.public",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f590c423e5084e60",
            "region": "eu-central-1",
            "route_table_id": "rtb-088e4aa4ebe7d8f65",
            "subnet_id": "subnet-0e1558305dc07bbd9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_main.module.vpc.aws_route_table.public",
            "module.vpc_main.module.vpc.aws_subnet.public",
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0078847c4e59f6835",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.240.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0078847c4e59f6835",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0078847c4e59f6835",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-00743531299c1b657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.240.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00743531299c1b657",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-00743531299c1b657",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0847220893b946b34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.240.112.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847220893b946b34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0847220893b946b34",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0f72f63271f202e95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.240.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f72f63271f202e95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Private Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0f72f63271f202e95",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0cf821f7e2b7b0821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.240.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf821f7e2b7b0821",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Private Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0cf821f7e2b7b0821",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0c0a34314da8de0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.240.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0a34314da8de0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Private Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0c0a34314da8de0ff",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0385e0508d823782d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.240.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0385e0508d823782d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Public Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0385e0508d823782d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-060e56e7ee6055766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.240.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060e56e7ee6055766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Public Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-060e56e7ee6055766",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:subnet/subnet-0e1558305dc07bbd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.240.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1558305dc07bbd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752630539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC Public Subnets",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "owners": "project01"
            },
            "vpc_id": "vpc-0cd02afd79c933165"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "050752630539",
            "id": "subnet-0e1558305dc07bbd9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc_main.module.vpc.aws_vpc.this",
            "module.vpc_main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:050752630539:vpc/vpc-0cd02afd79c933165",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.0.0/16",
            "default_network_acl_id": "acl-00cda874a13ae9f39",
            "default_route_table_id": "rtb-0ab87d0dc45c55fb4",
            "default_security_group_id": "sg-01806737342da5d1f",
            "dhcp_options_id": "dopt-0fc25212a41663e33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd02afd79c933165",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab87d0dc45c55fb4",
            "owner_id": "050752630539",
            "region": "eu-central-1",
            "tags": {
              "Name": "vpc-project01-dev",
              "owners": "project01"
            },
            "tags_all": {
              "Name": "vpc-project01-dev",
              "owners": "project01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}